libyelp: fix handling of documents using local paths

Since we switched to use custom URI schemes we no longer support loading
file URIs. We need to detect the document pointed by the given URI and
build an appropriate URI (ghelp, man, info, ...).

https://bugzilla.gnome.org/show_bug.cgi?id=753443